Revert "Merge release branch release/2.0.0"
This reverts commit 62a47e21ccf478e7798d707a4ffb20b5d6797f74, reversing
changes made to eb1fc20bf2e15d405a160db8f422c0f2da21a077.